modified the intial settings and the folder structure

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "betowear-front",
+  "name": "prueba-tecnica-cleverpy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
