--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+
     "husky": "^8.0.0"
   }
 }
